--- a/finalProject.html
+++ b/finalProject.html
@@ -31,6 +31,7 @@
             text-align: center;
         }
     </style>
+    
 </head>
 <body>
 
@@ -45,6 +46,132 @@
     <p>Section: 0003</p>
 </div>
 
+<form>
+    <label for="name">Name:</label>
+    <input type="text" id="name" placeholder="Your Name">
 
+    <label for="email">Email:</label>
+    <input type="email" id="email" placeholder="Your Email">
+
+    <label for="goal">Goal for the Week:</label>
+    <input type="text" id="goal" placeholder="Your Goal">
+
+    <!-- Input fields for meals from Monday to Sunday -->
+    <label for="mondayBreakfast">Monday - Breakfast:</label>
+    <input type="text" id="mondayBreakfast" placeholder="Breakfast">
+
+    <label for="mondaySnack">Monday - Snack:</label>
+    <input type="text" id="mondaySnack" placeholder="Snack">
+
+    <label for="mondayLunch">Monday - Lunch:</label>
+    <input type="text" id="mondayLunch" placeholder="Lunch">
+
+    <label for="mondaySnack2">Monday - Snack:</label>
+    <input type="text" id="mondaySnack2" placeholder="Snack">
+
+    <label for="mondayDinner">Monday - Dinner:</label>
+    <input type="text" id="mondayDinner" placeholder="Dinner">
+
+    
+    <!-- Tuesday -->
+    <label for="tuesdayBreakfast">Tuesday - Breakfast:</label>
+    <input type="text" id="tuesdayBreakfast" placeholder="Breakfast">
+
+    <label for="tuesdaySnack">Tuesday - Snack:</label>
+    <input type="text" id="tuesdaySnack" placeholder="Snack">
+
+    <label for="tuesdayLunch">Tuesday - Lunch:</label>
+    <input type="text" id="tuesdayLunch" placeholder="Lunch">
+
+    <label for="tuesdaySnack2">Tuesday - Snack:</label>
+    <input type="text" id="tuesdaySnack2" placeholder="Snack">
+
+    <label for="tuesdayDinner">Tuesday - Dinner:</label>
+    <input type="text" id="tuesdayDinner" placeholder="Dinner">
+
+
+    <!-- Wednesday -->
+    <label for="wednesdayBreakfast">Wednesday - Breakfast:</label>
+    <input type="text" id="wednesdayBreakfast" placeholder="Breakfast">
+
+    <label for="wednesdaySnack">Wednesday - Snack:</label>
+    <input type="text" id="wednesdaySnack" placeholder="Snack">
+
+    <label for="wednesdayLunch">Wednesday - Lunch:</label>
+    <input type="text" id="wednesdayLunch" placeholder="Lunch">
+
+    <label for="wednesdaySnack2">Wednesday - Snack:</label>
+    <input type="text" id="wednesdaySnack2" placeholder="Snack">
+
+    <label for="wednesdayDinner">Wednesday - Dinner:</label>
+    <input type="text" id="wednesdayDinner" placeholder="Dinner">
+
+    <!-- Thursday -->
+    <label for="thursdayBreakfast">Thursday - Breakfast:</label>
+    <input type="text" id="thursdayBreakfast" placeholder="Breakfast">
+
+    <label for="thursdaySnack">Thursday - Snack:</label>
+    <input type="text" id="thursdaySnack" placeholder="Snack">
+
+    <label for="thursdayLunch">Thursday - Lunch:</label>
+    <input type="text" id="thursdayLunch" placeholder="Lunch">
+
+    <label for="thursdaySnack2">Thursday - Snack:</label>
+    <input type="text" id="thursdaySnack2" placeholder="Snack">
+
+    <label for="thursdayDinner">Thursday - Dinner:</label>
+    <input type="text" id="thursdayDinner" placeholder="Dinner">
+
+    <!-- Friday -->
+    <label for="fridayBreakfast">Friday - Breakfast:</label>
+    <input type="text" id="fridayBreakfast" placeholder="Breakfast">
+
+    <label for="fridaySnack">Friday - Snack:</label>
+    <input type="text" id="fridaySnack" placeholder="Snack">
+
+    <label for="fridayLunch">Friday - Lunch:</label>
+    <input type="text" id="fridayLunch" placeholder="Lunch">
+
+    <label for="fridaySnack2">Friday - Snack:</label>
+    <input type="text" id="fridaySnack2" placeholder="Snack">
+
+    <label for="fridayDinner">Friday - Dinner:</label>
+    <input type="text" id="fridayDinner" placeholder="Dinner">
+
+    <!-- Saturday -->
+    <label for="saturdayBreakfast">Saturday - Breakfast:</label>
+    <input type="text" id="saturdayBreakfast" placeholder="Breakfast">
+
+    <label for="saturdaySnack">Saturday - Snack:</label>
+    <input type="text" id="saturdaySnack" placeholder="Snack">
+
+    <label for="saturdayLunch">Saturday - Lunch:</label>
+    <input type="text" id="saturdayLunch" placeholder="Lunch">
+
+    <label for="saturdaySnack2">Saturday - Snack:</label>
+    <input type="text" id="saturdaySnack2" placeholder="Snack">
+
+    <label for="saturdayDinner">Saturday - Dinner:</label>
+    <input type="text" id="saturdayDinner" placeholder="Dinner">
+
+    <!-- Sunday -->
+    <label for="sundayBreakfast">Sunday - Breakfast:</label>
+    <input type="text" id="sundayBreakfast" placeholder="Breakfast">
+
+    <label for="sundaySnack">Sunday - Snack:</label>
+    <input type="text" id="sundaySnack" placeholder="Snack">
+
+    <label for="sundayLunch">Sunday - Lunch:</label>
+    <input type="text" id="sundayLunch" placeholder="Lunch">
+
+    <label for="sundaySnack2">Sunday - Snack:</label>
+    <input type="text" id="sundaySnack2" placeholder="Snack">
+
+    <label for="sundayDinner">Sunday - Dinner:</label>
+    <input type="text" id="sundayDinner" placeholder="Dinner">
+
+    <button type="button" onclick="generateMealPlan()">Generate Meal Plan</button>
+</form>
+<script src="projectJS.js"></script>
 </body>
 </html>
